MJ 12/03/2010
- Improved the toString method of PriorityQ.Event

AM 1/10/2009
VERSION 1.0.5 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

MJ 07/07/09
- When there was a loop in the filesystem under one of the directories in
  the classpath, peersim hung when trying to collect the available classes
  (in order to resolve the underspecified classnames in the config). I added
  a temporary fix, which stops the directory walk after a (very large) maximal
  number of visited directories. Now peersim does not hang, but either fails
  with a clear message, or executes the simulation. Note that jar files
  are not affected, and they can still be arbitrarily large. When one needs
  an excessive number of packages (thousands) then a jar file is a better
  idea.
- Added a new constructor to RandPermutation for convenience.

MJ 09/06/09
- Fixed a bug in Scheduler found by Alberto. In the event
  based engine if "from" was set, the component was
  executed at "from" irrespective of "until". Besides,
  a negative "step" was not checked for.

AM 07/06/09
- Solved a bug identified by Mark: constant expressions
  were not allowed on RangeSimulator ranges, although they
  were explicitly mentioned in the documentation. The doc
  has been improved as well, saying that variables are not
  allowed inside ranges.
- Changed constants in peersim.rangesime.TaggedOutputStream
  from protected to public; this is needed to use the same
  class in other simulator implementations. Added the @config
  specification, so they appear correctly in the documentation.

AM 31/05/09
- Solved a bug in peersim.edsim.EDSimulator
  ClassCastException generated inside a user Control object
  were caught by the EDSimulator and a misleading error
  message was printed.

AM 30/04/09
- Solved a bug in ConfigContainer.  
  ConfigContainer.getInstance(String name, Object def) was 